# VRSuiteUtils

./: .gitignore  README.md  pyproject.toml
.config/: environment.yml  tc-environment.yml  tc_environment.yml
.github/ISSUE_TEMPLATE/: 1-feature_request.yaml  2-bug_report.yaml  3-documentation_improvement.yaml  4-release.yaml  5-other-task-request.yaml  config.yml
postprocessing/: Analyse 16-1.ipynb  Analyse 38-1.ipynb  case_study_plot.py  check_HR_results.ipynb  cost_of_requirements.ipynb  cost_of_target_reliability.ipynb  database_access_functions.py  database_analytics.py  determine_contributing_length.ipynb  generate_output.py  get_database_info.ipynb  get_database_info.py  load_output.py  notebook_example_Weurt.ipynb  notebook_example_multiple_runs.ipynb  notebook_sort_by_failure_prob.ipynb  notebook_testbank_validation.ipynb  notebook_vr_index.ipynb  plot_frequency_curves.ipynb  plot_functions.py  retreive_database_info.py  uniform_requirements_analysis.py  vrtool_measures_object.py  vrtool_optimization_object.py
postprocessing/.ipynb_checkpoints/: get_database_info-checkpoint.ipynb
postprocessing/common_functions/: Deltares_colors.py  database_access_functions.py  database_analytics.py  generate_output.py  uniform_requirements_analysis.py  vrtool_measures_object.py  vrtool_optimization_object.py
postprocessing/models/: __init__.py
postprocessing/trajecten_overzicht/: plot_trajecten_vr.py  trajecten.csv
preprocessing/: GenerateProfiles.py  __init__.py  __main__.py  api.py  common_functions.py  derive_profiles.py  preprocessing.md
preprocessing/HydraRingComputations/: ToetspeilHydraRing.py
preprocessing/default_files/: Bekleding_default.csv  Dijkprofielen.csv  HR_default.csv  Piping_default.csv  Stabiliteit_default.csv  Vakindeling.csv  input.txt
preprocessing/generic_data/: base_measures.csv  base_measures_dstab_test.csv  base_measures_revetment.csv  base_measures_revetment_selectie.csv  base_measures_revetment_small.csv  base_measures_totaal.csv  diketrajectinfo.csv
preprocessing/step0_initialize_project/: create_project_structure.py  create_project_strucure.py
preprocessing/step1_generate_shapefile/: angelos.py  traject_shape.py
preprocessing/step2_mechanism_data/: hydranl_read.py  hydraring_computation.py
preprocessing/step3_derive_general_data/: GenerateProfiles.py  derive_bebouwing.py  derive_characteristic_points.py  derive_profiles.py  get_binnenteenlijn.py  plot_profiles.py  profile_functions.py
preprocessing/step4_build_sqlite_db/: read_intermediate_outputs.py  write_database.py
preprocessing/stepx_derive_profiles/: GenerateProfiles.py  derive_profiles.py  plot_profiles.py  profile_functions.py
preprocessing/visualization/: plot_functions.py
preprocessing/workflows/: GenerateInput.py  bekleding_gebu_zst_workflow.py  bekleding_qvariant_workflow.py  bekleding_workflow.py  derive_buildings_workflow.py  generateInput38-1.py  generate_vakindeling.py  generate_vakindeling_workflow.py  get_profiles_workflow.py  hydranl_overflow_workflow.py  (+7 more)
tests/: __init__.py  test_1_generate_shapefile.py  test_step_1_generate_shapefile.py  test_step_2_generate_mechanism_input.py  test_step_3_add_dike_section_input.py  test_step_3_load_input_and_intermediate_data.py  test_step_4_build_database.py
(+284 files in other folders)
