[tool.poetry]
name = "vrtoolpreprocess"
version = "0.1.0"
description = ""
authors = ["WJKlerk <61802340+WJKlerk@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/Deltares/VrToolPreprocess"
packages = [{include="preprocessing"},]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
geopandas = "^0.12.2"
seaborn = "^0.12.2"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
