[tool.poetry]
name = "vrtoolpreprocess"
version = "0.1.0"
description = ""
authors = ["WJKlerk <61802340+WJKlerk@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/Deltares/VrToolPreprocess"
packages = [{include="preprocessing"},]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
geopandas = "^0.12.2"
seaborn = "^0.12.2"
scipy = "^1.10.1"
geojson = "^3.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
teamcity-messages = "^1.32"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]