[tool.poetry]
name = "vrtoolpreprocess"
version = "0.2.0"
description = ""
authors = ["WJKlerk <61802340+WJKlerk@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/Deltares/VrToolPreprocess"
packages = [{include="preprocessing"},]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
geopandas = "^0.12.2"
numpy = "^1.24.3"
seaborn = "^0.12.2"
pandas = "^1.5.3"
shapely = "^2.0.1"
fiona = "^1.9.3"
scipy = "^1.8.1"
geojson = "^3.0.1"
openpyxl = "^3.1.2"
owslib = "^0.29.1"
contextily = "^1.3.0"
vrtool = {path = "externals/vrtool/vrtool-0.2.0.tar.gz"}

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
teamcity-messages = "^1.32"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
(
  /(
      \.git         # exclude a few common directories in the
    | \.github          # root of the project
    | \.env
    | \.venv
    | \.config
    | .pytest_cache
    | .scannerwork
    | .vscode
    | site
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip = [".git", ".github", ".env", ".venv", ".config", ".pytest_cache", ".scannerwork", ".vscode", "site"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]